<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/upload_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_resto_page_upload_button"
            android:background="@color/B"
            android:textColor="@color/black"
            android:padding="@dimen/default_margin"
            style="@style/TitleTextStyle"/>


        <ImageView
            android:id="@+id/prewiew_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/resto1"/>

    </LinearLayout>

    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/item_margin"
        android:hint="@string/add_resto_page_name_input"
        android:paddingLeft="@dimen/default_margin"
        style="@style/DefaultTextStyle"/>

    <EditText
        android:id="@+id/description_input"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/item_margin"
        android:hint="@string/add_resto_page_name_description_input"
        android:paddingLeft="@dimen/default_margin"
        style="@style/DefaultTextStyle"/>

    <EditText
        android:id="@+id/emplacement_input"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/item_margin"
        android:hint="@string/add_resto_page_name_emplacement"
        android:paddingLeft="@dimen/default_margin"
        style="@style/DefaultTextStyle"/>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/B"
        android:text="@string/add_resto_page_confirm_button"
        android:layout_marginTop="@dimen/default_margin"
        style="@style/TitleTextStyle"/>


</LinearLayout>