<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="500dp"
    android:padding="@dimen/default_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/resto1" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/popup_resto_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_resto_name"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="@+id/cardView2"
        android:layout_marginLeft="@dimen/default_margin"
        style="@style/TitleTextStyle"/>

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="56dp"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/popup_resto_description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/popup_resto_description_title"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        style="@style/TitleTextStyle"/>

    <TextView
        android:id="@+id/popup_resto_description_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_resto_description_subtitle"
        app:layout_constraintStart_toStartOf="@+id/popup_resto_description_title"
        app:layout_constraintTop_toBottomOf="@+id/popup_resto_description_title"
        style="@style/DefaultTextStyle"/>

    <TextView
        android:id="@+id/popup_resto_type_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/popup_resto_type_title"
        app:layout_constraintStart_toStartOf="@+id/popup_resto_description_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/popup_resto_description_subtitle"
        style="@style/TitleTextStyle"/>

    <TextView
        android:id="@+id/popup_resto_type_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_resto_type_subtitle"
        app:layout_constraintStart_toStartOf="@+id/popup_resto_type_title"
        app:layout_constraintTop_toBottomOf="@+id/popup_resto_type_title"
        style="@style/DefaultTextStyle"/>

    <View
        android:id="@+id/view_separetion"
        android:layout_width="1dp"
        android:layout_height="70dp"
        android:layout_marginTop="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_resto_type_subtitle" />

    <ImageView
        android:id="@+id/delete_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:src="@drawable/ic_trash"
        app:layout_constraintBottom_toBottomOf="@+id/view_separetion"
        app:layout_constraintStart_toEndOf="@+id/view_separetion"
        app:layout_constraintTop_toTopOf="@+id/view_separetion" />

    <ImageView
        android:id="@+id/unlike_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginRight="70dp"
        android:src="@drawable/ic_unlike"
        app:layout_constraintBottom_toBottomOf="@+id/view_separetion"
        app:layout_constraintEnd_toStartOf="@+id/view_separetion"
        app:layout_constraintTop_toTopOf="@+id/view_separetion" />

</androidx.constraintlayout.widget.ConstraintLayout>